<resources>
    <string name="app_name">حصاد</string>

    <string name="title_survey">إستبيان</string>
    <string name="title_tasks">المهام</string>
    <string name="title_addition">إضافة</string>
    <string name="title_profile">حسابي</string>

    <string name="title_login">تسجيل الدخول</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="please_enter_require_data">برجاء إدخال البيانات المطلوبة</string>
    <string name="logout">تسجيل خروج</string>
    <string name="logout_message">هل ترغب بالخروج؟</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>

    <string name="firstName">الأسم الأول</string>
    <string name="lastName">الأسم الأخير</string>
    <string name="gender">الجنس</string>
    <string name="age">العمر</string>
    <string name="address">العنوان</string>
    <string name="university">الجامعة</string>
    <string name="major">التخصص</string>
    <string name="gradYear">سنة التخرج</string>
    <string name="experience">عدد سنوات الخبرة</string>
    <string name="hasVehicle">هل لديك سيارة؟</string>
    <string name="male">ذكر</string>
    <string name="female">انثى</string>
    <string name="ownershipLand">أرض ملك</string>
    <string name="rentalLand">أرض إيجار</string>
    <string name="possessionType">نوع الحيازة</string>
    <string name="geographicalLocationEarth">الموقع الجغرافي للأرض</string>
    <string name="currentCrop">المحصول الحالي</string>
    <string name="previouslyGrownCrops">المحاصيل المزروعة سابقًا</string>
    <string name="firstDayToCultivation">أول يوم للزراعة</string>
    <string name="numberOfFarmersInList">يوجد %1$d مزارعين في القائمة</string>
    <string name="listOfFarmers">قائمة المزارعين</string>
    <string name="searchHint">ابحث بالأسم او برقم التليفون</string>
    <string name="no_missions">لا توجد مهام</string>
    <string name="name">الأسم</string>
    <string name="cropType">نوع المحصول</string>
    <string name="zeroDay">يوم البذر</string>
    <string name="landArea">مساحة الأرض</string>
    <string name="please_enter">برجاء إدخال هذا الحقل</string>
    <string name="added_successfully">تم الإضافة</string>
    <string name="select_farmer_from_menu">اختر مزارع من القائمة لبدء الاستبيان</string>
    <string name="village">القرية</string>
    <string name="center">المركز</string>
    <string name="typeOfWork">نوع العمل</string>
    <string name="typeOfWorkFirstOption">قطاع عام او خاص</string>
    <string name="typeOfWorkSecondOption">التفرغ التام للزراعة</string>
    <string name="deputizingFarmerMsg">في حالة عدم التفرغ للزراعة - اختيار من ينوب عن المزارع</string>
    <string name="wife">الزوجة</string>
    <string name="son">الابن</string>
    <string name="worker">عامل</string>
    <string name="partner">شريك</string>
    <string name="relative">احد الاقارب</string>
    <string name="permissionDeniedMsg">تم رفض الإذن بالموقع</string>
    <string name="errorMsg">حدث خطأ</string>
    <string name="connectionError">يرجى التحقق من اتصال الشبكة الخاص بك</string>
    <string name="noFarmers">لا يوجد مزارعين</string>
    <string name="farmers">مزارعين</string>
    <string name="addFarmer">إضافة مزارع</string>
    <string name="content">المحتوى</string>
    <string name="noContent">لا يوجد محتوى</string>
    <string name="surveyMsgOffline">عند الاتصال بالانترنت سيتم ارسال الاستبيان</string>
    <string name="addFarmerMsgOffline">عند الاتصال بالانترنت سيتم ارسال البيانات</string>
    <string name="noTasks">لا توجد مهام</string>
    <string name="uploadAtleastImageMsg">برجاء إرفاق صورة على الاقل</string>
    <string name="workingTasks">مهام العمل</string>
    <string name="notes">ملاحظات</string>
    <string name="noNotes">لا توجد ملاحظات</string>
    <string name="phoneErrorMsg">برجاء إدخال رقم هاتف مصري صحيح</string>
    <string name="show_media">إظهار الوسائط</string>
    <string name="close">إغلاق</string>
    <string name="farmer_name">اسم المزارع</string>
    <string name="searchByFarmerName">ابحث بأسم المزارع</string>
    <string name="question">السؤال</string>
    <string name="noData">لا يوجد</string>
    <string name="schedules">الجداول</string>
    <string name="noSchedules">لا توجد جداول</string>
</resources>